Fixed spacing issue

--- a/css/chopstix.css
+++ b/css/chopstix.css
@@ -6,6 +6,8 @@ body {
   font-size: 16px;
   color: rgba(250, 250, 250, 1);
   font-family: 'Montserrat', sans-serif;
+  width: 100%;
+  overflow-x: hidden;
 }
 a {
   text-decoration: none;
